--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,4 +1,3 @@
-
 img {
   display: block;
   max-width: 100%;
@@ -25,15 +24,32 @@ img {
 }
 
 .container {
-  width: 1200px;
+  width: 100%; /* 1200px */
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  /* outline: 2px solid red; */
+  outline: 2px solid red;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px; /* 94px */
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
