--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -10,7 +10,7 @@
   padding-top: 118px;
   padding-bottom: 118px;
 
-  @media screen and (min-width: 1200px) {
+  @include desktop {
   padding-top: 200px;
   padding-bottom:200px;
   }
@@ -29,7 +29,7 @@
   margin-right: auto;
   margin-bottom: 30px;
 
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     max-width: 696px;
     font-size: 44px; /* 44px */
     line-height: calc(60 / 44);
