--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@ address {
 
 img {
   display: block;
+  width: 100%;
   max-width: 100%;
   height: auto;
 }
@@ -530,75 +531,97 @@ img {
 }
 
 .about {
-  padding-top: 0;
+  display: none;
 }
 
-.about__list {
-  display: flex;
-  column-gap: 30px; /* задает отступы между li списком, кром последнего/первого. Аналог child */
+@media screen and (min-width: 1200px) {
+  .about {
+    padding-top: 0;
+    display: contents;
+  }
+  .about__list {
+    display: flex;
+    column-gap: 30px; /* задает отступы между li списком, кром последнего/первого. Аналог child */
+  }
+  .about__title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-title-color);
+    margin-bottom: 50px;
+  }
+  .about__item {
+    position: relative;
+  }
+  .about__text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #ffffff;
+    background-color: rgba(47, 48, 58, 0.8);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
-
-.about__title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--main-title-color);
-  margin-bottom: 50px;
-}
-
-.about__item {
-  position: relative;
-}
-
-.about__text {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
-  background-color: rgba(47, 48, 58, 0.8);
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 70px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .team {
   background-color: #f5f4fa;
 }
 
 .team-card {
   display: flex;
-  column-gap: 30px;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .team-card__item {
+  align-items: baseline;
+  width: 100%;
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
+@media screen and (min-width: 768px) {
+  .team-card__item {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-card__item {
+    flex-basis: calc((100% - 90px) / 4);
+  }
+}
 
 .team__title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.1785714286;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-title-color);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .team__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.1666666667;
+  }
 }
 
 .team-card__title {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.19;
+  line-height: 1.1875;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-title-color);
@@ -710,22 +733,48 @@ img {
 }
 
 .portfolio__button {
-  margin-bottom: 50px;
+  margin-bottom: 40px;
   display: flex;
-  justify-content: center;
-  column-gap: 8px;
+  flex-wrap: wrap;
+  justify-content: start;
+  gap: 15px 8px;
+}
+@media screen and (min-width: 768px) {
+  .portfolio__button {
+    margin-bottom: 30px;
+    flex-wrap: nowrap;
+    justify-content: center;
+    gap: 8px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio__button {
+    margin-bottom: 50px;
+    flex-wrap: nowrap;
+    justify-content: center;
+    gap: 8px;
+  }
 }
 
 .card {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 30px;
-  row-gap: 30px;
+  gap: 30px;
 }
 
 .card__item {
-  width: calc((100% - 60px) / 3);
+  width: 100%;
   /* position: relative; */
+}
+@media screen and (min-width: 768px) {
+  .card__item {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .card__item {
+    flex-basis: calc((100% - 60px) / 3);
+  }
 }
 
 .card-info {
@@ -781,11 +830,21 @@ img {
   height: 100%;
   transform: translateY(101%);
   transition: transform var(--duration) var(--timing-function-cubic);
-  padding: 63px 24px;
+  padding: 77px 24px;
   overflow: auto;
 }
 .card__link:hover .card-overlay__text {
   transform: translateY(0);
+}
+@media screen and (min-width: 768px) {
+  .card-overlay__text {
+    padding: 63px 24px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .card-overlay__text {
+    padding: 63px 24px;
+  }
 }
 
 .backdrop {
@@ -860,8 +919,63 @@ img {
   padding-bottom: 60px;
 }
 
+.footer-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: baseline;
+  gap: 60px;
+  /*   flex-basis: calc(100% / 3); */
+}
+@media screen and (min-width: 768px) {
+  .footer-container {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    text-align: center;
+    flex-wrap: wrap;
+    gap: 60px 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    gap: 0;
+  }
+}
+
+.address-container {
+  /* margin-bottom: 60px; */
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .address-container {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .address-container {
+    margin-right: 70px;
+    text-align: left;
+  }
+}
+
 .address {
   margin-top: auto;
+}
+
+.address__item {
+  margin-bottom: 8px;
+}
+.address__item:last-child {
+  margin-bottom: 0;
+}
+@media screen and (min-width: 1200px) {
+  .address__item {
+    margin-bottom: 9px;
+  }
 }
 
 .address__item-map {
@@ -877,7 +991,7 @@ img {
 
 .address__link {
   font-size: 14px;
-  line-height: 1.7;
+  line-height: 1.7142857143;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   transition: color var(--duration) var(--timing-function-cubic);
@@ -886,21 +1000,26 @@ img {
   color: var(--main-hover-color);
 }
 
-.address__item {
-  margin-bottom: 9px;
-}
-.address__item:last-child {
-  margin-bottom: 0;
-}
-
-.footer-container {
+.soc-container {
   display: flex;
-  justify-content: start;
-  align-items: baseline;
+  flex-flow: column wrap;
+  align-content: center;
+  align-items: center;
+  gap: 20px;
+  /* margin-bottom: 20px; */
+  /*   flex-basis: 100%; */
+  /* @include tablet {
+    flex-basis: 0;
+  } */
 }
-
-.address-container {
-  margin-right: 70px;
+@media screen and (min-width: 1200px) {
+  .soc-container {
+    /*     flex-basis: 0; */
+    margin-right: 70px;
+    text-align: left;
+    align-items: flex-start;
+    /* align-content: flex-start; */
+  }
 }
 
 .soc-container__text {
@@ -910,17 +1029,45 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
-  margin-bottom: 20px;
+  /*   margin-bottom: 20px; */
 }
 
 .subscription-container {
-  margin-left: 93px;
+  display: flex;
+  flex-flow: column wrap;
+  align-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+  /* @include tablet {
+    display: flex;
+    flex-flow: column wrap;
+    align-content: center;
+    align-items: center;
+    gap: 20px;
+  } */
+}
+@media screen and (min-width: 1200px) {
+  .subscription-container {
+    align-items: flex-start;
+    width: auto;
+  }
 }
 
 .subscription-form {
   display: flex;
-  justify-content: center;
-  gap: 12px;
+  flex-flow: column wrap;
+  align-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+}
+@media screen and (min-width: 1200px) {
+  .subscription-form {
+    width: auto;
+    flex-flow: nowrap;
+    gap: 12px;
+  }
 }
 
 .subscription__title {
@@ -929,13 +1076,16 @@ img {
   line-height: 1.1428571429;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: left;
   color: #ffffff;
-  margin-bottom: 20px;
+  /* @include desktop {
+    align-content: flex-start;
+  } */
 }
 
 .subscription-form__input {
   /* box-sizing: border-box; */
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -943,6 +1093,7 @@ img {
   color: rgba(255, 255, 255, 0.6);
   background-color: rgba(0, 0, 0, 0);
   padding: 15px 16px;
+  /* margin-bottom: 20px; */
 }
 .subscription-form__input::placeholder {
   font-weight: 400;
@@ -952,6 +1103,16 @@ img {
   align-items: center;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+@media screen and (min-width: 768px) {
+  .subscription-form__input {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscription-form__input {
+    width: 358px;
+  }
 }
 
 .subscription-form__btn {
