--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,5 +1,6 @@
 img {
   display: block;
+  width: 100%;
   max-width: 100%;
   height: auto;
 }
@@ -31,15 +32,15 @@ img {
   margin-right: auto;
   outline: 2px solid red;
 
-  @media screen and (min-width: 480px) {
+  @include mobile {
     width: 480px;
   }
 
-  @media screen and (min-width: 768px) {
+  @include tablet {
     width: 768px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     width: 1200px;
   }
 }
@@ -48,7 +49,7 @@ img {
   padding-top: 60px; /* 94px */
   padding-bottom: 60px;
 
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     padding-top: 94px;
     padding-bottom: 94px;
   }
