--- a/sass/layouts/_about.scss
+++ b/sass/layouts/_about.scss
@@ -1,40 +1,48 @@
-.about {
-  padding-top: 0;
+.about{
+display: none;
 }
 
-.about__list {
-  display: flex;
-  column-gap: 30px; /* задает отступы между li списком, кром последнего/первого. Аналог child */
+@include desktop{
+  .about {
+    padding-top: 0;
+    display: contents;
+  }
+  
+  .about__list {
+    display: flex;
+    column-gap: 30px; /* задает отступы между li списком, кром последнего/первого. Аналог child */
+  }
+  
+  .about__title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-title-color);
+    margin-bottom: 50px;
+  }
+  
+  .about__item {
+    position: relative;
+  }
+  
+  .about__text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #ffffff;
+    background-color: rgba(47, 48, 58, 0.8);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
-.about__title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--main-title-color);
-  margin-bottom: 50px;
-}
-
-.about__item {
-  position: relative;
-}
-
-.about__text {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
-  background-color: rgba(47, 48, 58, 0.8);
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 70px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
