--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -12,7 +12,7 @@
     line-height: calc(42 / 36);
   } */
 
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     font-size: 36px;
     line-height: calc(42 / 36);
     margin-bottom: 50px;
@@ -31,11 +31,11 @@
   width: 100%;
   flex-basis: calc((100% - 30px) / 2);
 
-  @media screen and (min-width: 768px) {
+  @include tablet {
     flex-basis: calc((100% - 60px) / 3);
   }
 
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     flex-basis: calc((100% - 150px) / 6);
   }
 }
