--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -12,11 +12,11 @@
   /* margin-right: 30px; */
   /* flex-basis: calc((100% - 90px) / 4); */
 
-  @media screen and (min-width: 768px) {
+  @include tablet {
     flex-basis: calc((100% - 30px) / 2);
   }
 
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     flex-basis: calc((100% - 90px) / 4);
   }
 }
