--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -4,8 +4,59 @@
   padding-bottom: 60px;
 }
 
+.footer-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: baseline;
+  gap: 60px;
+  /*   flex-basis: calc(100% / 3); */
+
+  @include tablet {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    text-align: center;
+    flex-wrap: wrap;
+    gap: 60px 165px;
+  }
+
+  @include desktop {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    gap: 0;
+  }
+}
+
+.address-container {
+  /* margin-bottom: 60px; */
+  text-align: center;
+
+  @include tablet {
+    margin-bottom: 0;
+  }
+
+  @include desktop {
+    margin-right: 70px;
+    text-align: left;
+  }
+}
+
 .address {
   margin-top: auto;
+}
+
+.address__item {
+  margin-bottom: 8px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  @include desktop {
+    margin-bottom: 9px;
+  }
 }
 
 .address__item-map {
@@ -23,7 +74,7 @@
 
 .address__link {
   font-size: 14px;
-  line-height: 1.7;
+  line-height: calc(24 / 14);
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   transition: color var(--duration) var(--timing-function-cubic);
@@ -34,22 +85,26 @@
   }
 }
 
-.address__item {
-  margin-bottom: 9px;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.footer-container {
+.soc-container {
   display: flex;
-  justify-content: start;
-  align-items: baseline;
-}
+  flex-flow: column wrap;
+  align-content: center;
+  align-items: center;
+  gap: 20px;
+  /* margin-bottom: 20px; */
+  /*   flex-basis: 100%; */
 
-.address-container {
-  margin-right: 70px;
+  /* @include tablet {
+    flex-basis: 0;
+  } */
+
+  @include desktop {
+    /*     flex-basis: 0; */
+    margin-right: 70px;
+    text-align: left;
+    align-items: flex-start;
+    /* align-content: flex-start; */
+  }
 }
 
 .soc-container__text {
@@ -59,17 +114,44 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
-  margin-bottom: 20px;
+  /*   margin-bottom: 20px; */
 }
 
 .subscription-container {
-  margin-left: 93px;
+  display: flex;
+  flex-flow: column wrap;
+  align-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+
+  /* @include tablet {
+    display: flex;
+    flex-flow: column wrap;
+    align-content: center;
+    align-items: center;
+    gap: 20px;
+  } */
+
+  @include desktop {
+    align-items: flex-start;
+    width: auto;
+  }
 }
 
 .subscription-form {
   display: flex;
-  justify-content: center;
-  gap: 12px;
+  flex-flow: column wrap;
+  align-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+
+  @include desktop {
+    width: auto;
+    flex-flow: nowrap;
+    gap: 12px;
+  }
 }
 
 .subscription__title {
@@ -78,13 +160,17 @@
   line-height: calc(16 / 14);
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: left;
   color: #ffffff;
-  margin-bottom: 20px;
+  
+  /* @include desktop {
+    align-content: flex-start;
+  } */
 }
 
 .subscription-form__input {
   /* box-sizing: border-box; */
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -92,6 +178,7 @@
   color: rgba(255, 255, 255, 0.6);
   background-color: rgba(0, 0, 0, 0);
   padding: 15px 16px;
+  /* margin-bottom: 20px; */
 
   &::placeholder {
     font-weight: 400;
@@ -101,6 +188,14 @@
     align-items: center;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+  }
+
+@include tablet{
+  width: 450px;
+}
+
+  @include desktop {
+    width: 358px;
   }
 }
 
