--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -4,30 +4,47 @@
 
 .team-card {
   display: flex;
-  column-gap: 30px;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .team-card__item {
+  align-items: baseline;
+  width: 100%;
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+
+    @include tablet {
+      flex-basis: calc((100% - 30px) / 2);
+    }
+  
+    @include desktop {
+      flex-basis: calc((100% - 90px) / 4);
+    }
 }
 
 .team__title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: calc(33 / 28);
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-title-color);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+
+  @include desktop {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: calc(42 / 36);
+  }
 }
 
 .team-card__title {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.19;
+  line-height: calc(19 / 16);
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-title-color);
@@ -44,4 +61,3 @@
   /* padding-bottom: 30px; */
   margin-bottom: 16px;
 }
-
