--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,69 @@
   margin: -1px;
 }
 
+.mob-menu {
+  display: none;
+  position: fixed;
+  background-color: #FFFFFF;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 2;
+  padding-top: 10px;
+  padding-bottom: 48px;
+}
+
+.mob-menu-container {
+  padding-left: 40px;
+}
+
+.menu-open-btn {
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+}
+
+.menu-open-btn:hover .menu-open-btn__menu-icon, .menu-open-btn:focus .menu-open-btn__menu-icon {
+  fill: var(--main-hover-color);
+}
+
+.menu-close-btn {
+  /* position: absolute;
+  top: 0px;
+  right: 0px; */
+  display: block;
+  margin-left: auto;
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+}
+
+.menu-close-btn:hover .menu-close-btn__menu-icon, .menu-close-btn:focus .menu-close-btn__menu-icon {
+  fill: var(--main-hover-color);
+}
+
+.mob-menu-navigation {
+  margin-top: -2px;
+}
+
+.mob-menu-nav__item {
+  margin-bottom: 32px;
+}
+
+.mob-menu-nav__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: var(--main-title-color);
+}
+.mob-menu-nav__link.current-link::after {
+  display: none;
+}
+
 p,
 h1,
 h2,
@@ -201,6 +264,10 @@ img {
   letter-spacing: 0.01em;
   color: var(--main-text-color);
   margin-bottom: 4px;
+  cursor: pointer;
+}
+.registration-form__title:focus-within, .registration-form__title:hover {
+  color: var(--main-hover-color);
 }
 
 .registration-form__wrap {
@@ -214,8 +281,9 @@ img {
   border-radius: 4px;
   padding-left: 42px;
   transition: border-color var(--duration) var(--timing-function-cubic), outline-color var(--duration) var(--timing-function-cubic);
+  cursor: pointer;
 }
-.registration-form__input:focus {
+.registration-form__input:focus, .registration-form__input:hover {
   border-color: var(--main-hover-color);
   outline-color: var(--main-hover-color);
 }
@@ -229,8 +297,9 @@ img {
   resize: none;
   padding: 12px 16px;
   transition: border-color var(--duration) var(--timing-function-cubic), outline-color var(--duration) var(--timing-function-cubic);
+  cursor: pointer;
 }
-.registration-form__comment:focus {
+.registration-form__comment:focus, .registration-form__comment:hover {
   border-color: var(--main-hover-color);
   outline-color: var(--main-hover-color);
 }
@@ -249,7 +318,7 @@ img {
   transform: translateY(-50%);
   transition: fill var(--duration) var(--timing-function-cubic);
 }
-.modal-input:focus + .registration-form__icon {
+.registration-form__input:hover + .registration-form__icon, .registration-form__input:focus + .registration-form__icon {
   fill: var(--main-hover-color);
 }
 
@@ -259,20 +328,27 @@ img {
 
 .modal-checkbox__text {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7142857143;
+  font-size: 12px;
+  line-height: 1.1666666667;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+}
+@media screen and (min-width: 1200px) {
+  .modal-checkbox__text {
+    font-size: 14px;
+    line-height: 1.7142857143;
+  }
 }
 .modal-checkbox__text span:first-child {
   width: 16px;
   height: 15px;
   border: 2px solid var(--main-title-color);
   border-radius: 3px;
-  margin-right: 8.38px;
+  margin-right: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -281,6 +357,11 @@ img {
 .modal-checkbox__input:checked + .modal-checkbox__text span:first-child {
   background-color: var(--main-hover-color);
   border-color: var(--main-hover-color);
+}
+@media screen and (min-width: 1200px) {
+  .modal-checkbox__text span:first-child {
+    margin-right: 8.38px;
+  }
 }
 
 .modal-checkbox__check {
@@ -293,10 +374,16 @@ img {
 
 .modal-checkbox__link {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7142857143;
+  font-size: 12px;
+  line-height: 1.1666666667;
   letter-spacing: 0.03em;
   color: var(--main-hover-color);
+}
+@media screen and (min-width: 1200px) {
+  .modal-checkbox__link {
+    font-size: 14px;
+    line-height: 1.7142857143;
+  }
 }
 
 .modal-checkbox__btn {
@@ -332,15 +419,34 @@ img {
 .header__container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+@media screen and (min-width: 1200px) {
+  .header__container {
+    justify-content: none;
+  }
 }
 
 .header-navigation {
   display: flex;
   align-items: center;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  margin-left: 15px;
+}
+@media screen and (min-width: 1200px) {
+  .header-navigation {
+    margin: 0;
+  }
 }
 
 .header-nav {
-  display: flex;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .header-nav {
+    display: flex;
+  }
 }
 
 .header-nav__item {
@@ -368,9 +474,14 @@ img {
 }
 
 .header-contacts {
-  margin-left: auto;
-  display: flex;
-  justify-content: flex-end;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .header-contacts {
+    margin-left: auto;
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
 .header-contacts__item {
@@ -498,8 +609,6 @@ img {
 }
 
 .quality {
-  /* margin-left: auto;
-  margin-right: auto; */
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
@@ -527,10 +636,20 @@ img {
   align-items: center;
   justify-content: center;
   width: 100%;
-  max-width: 450px; /* width: 270px; */
+  max-width: 450px;
   height: 120px;
   background-color: #f5f4fa;
   margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .quality__logo {
+    max-width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .quality__logo {
+    max-width: 270px;
+  }
 }
 
 .quality__title {
@@ -542,6 +661,14 @@ img {
   text-transform: uppercase;
   color: var(--main-title-color);
   margin-bottom: 10px;
+  /* @include desktop{
+    text-align: left;
+  } */
+}
+@media screen and (min-width: 768px) {
+  .quality__title {
+    text-align: left;
+  }
 }
 
 .quality__text {
@@ -883,13 +1010,21 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1); /*scale показыает точку с которой будет пояляться */
-  width: 528px;
-  height: 581px;
+  width: calc(100% - 30px);
+  max-width: 450px;
+  height: 609px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform var(--duration) var(--timing-function-cubic);
   padding: 40px;
+}
+@media screen and (min-width: 1200px) {
+  .modal-window {
+    width: 528px;
+    min-width: 528px;
+    height: 581px;
+  }
 }
 .backdrop.is-hidden .modal-window {
   /* закрытое окно модалки */
@@ -913,6 +1048,9 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+.modal-window__btn:hover .modal-wimdow__icon--close, .modal-window__btn:focus .modal-wimdow__icon--close {
+  fill: var(--main-hover-color);
+}
 
 .is-hidden {
   opacity: 0;
@@ -927,11 +1065,16 @@ img {
 .modal-window__title {
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-title-color);
   margin-bottom: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .modal-window__title {
+    line-height: 1.15;
+  }
 }
 
 .footer {
