--- a/sass/components/_registration.scss
+++ b/sass/components/_registration.scss
@@ -14,6 +14,12 @@
   letter-spacing: 0.01em;
   color: var(--main-text-color);
   margin-bottom: 4px;
+  cursor: pointer;
+
+  &:focus-within,
+  &:hover {
+    color: var(--main-hover-color);
+  }
 }
 
 .registration-form__wrap {
@@ -28,8 +34,10 @@
   padding-left: 42px;
   transition: border-color var(--duration) var(--timing-function-cubic),
     outline-color var(--duration) var(--timing-function-cubic);
+  cursor: pointer;
 
-  &:focus {
+  &:focus,
+  &:hover {
     border-color: var(--main-hover-color);
     outline-color: var(--main-hover-color);
   }
@@ -45,8 +53,10 @@
   padding: 12px 16px;
   transition: border-color var(--duration) var(--timing-function-cubic),
     outline-color var(--duration) var(--timing-function-cubic);
+  cursor: pointer;
 
-  &:focus {
+  &:focus,
+  &:hover {
     border-color: var(--main-hover-color);
     outline-color: var(--main-hover-color);
   }
@@ -67,7 +77,8 @@
   transform: translateY(-50%);
   transition: fill var(--duration) var(--timing-function-cubic);
 
-  .modal-input:focus + & {
+  .registration-form__input:hover + &,
+  .registration-form__input:focus + & {
     fill: var(--main-hover-color);
   }
 }
@@ -78,20 +89,26 @@
 
 .modal-checkbox__text {
   font-weight: 400;
-  font-size: 14px;
-  line-height: calc(24 / 14);
+  font-size: 12px;
+  line-height: calc(14 / 12);
   letter-spacing: 0.03em;
   color: var(--main-text-color);
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+
+  @include desktop {
+    font-size: 14px;
+    line-height: calc(24 / 14);
+  }
 
   & span:first-child {
     width: 16px;
     height: 15px;
     border: 2px solid var(--main-title-color);
     border-radius: 3px;
-    margin-right: 8.38px;
+    margin-right: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -101,6 +118,10 @@
     .modal-checkbox__input:checked + & {
       background-color: var(--main-hover-color);
       border-color: var(--main-hover-color);
+    }
+
+    @include desktop {
+      margin-right: 8.38px;
     }
   }
 }
@@ -116,10 +137,15 @@
 
 .modal-checkbox__link {
   font-weight: 400;
-  font-size: 14px;
-  line-height: calc(24 / 14);
+  font-size: 12px;
+  line-height: calc(14 / 12);
   letter-spacing: 0.03em;
   color: var(--main-hover-color);
+
+  @include desktop {
+    font-size: 14px;
+    line-height: calc(24 / 14);
+  }
 }
 
 .modal-checkbox__btn {
