--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -1,6 +1,4 @@
 .quality {
-  /* margin-left: auto;
-  margin-right: auto; */
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
@@ -26,10 +24,18 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  max-width: 450px; /* width: 270px; */
+  max-width: 450px;
   height: 120px;
   background-color: #f5f4fa;
   margin-bottom: 30px;
+
+  @include tablet{
+    max-width: 354px;
+  }
+
+  @include desktop{
+    max-width: 270px;
+  }
 }
 
 .quality__title {
@@ -41,6 +47,14 @@
   text-transform: uppercase;
   color: var(--main-title-color);
   margin-bottom: 10px;
+
+  @include tablet{
+    text-align: left;
+  }
+
+  /* @include desktop{
+    text-align: left;
+  } */
 }
 
 .quality__text {
