--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -14,8 +14,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1); /*scale показыает точку с которой будет пояляться */
-  width: 528px;
-  height: 581px;
+  width: calc(100% - 30px);
+  max-width: 450px;
+  height: 609px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -23,10 +24,17 @@
   transition: transform var(--duration) var(--timing-function-cubic);
   padding: 40px;
 
+  @include desktop {
+    width: 528px;
+    min-width: 528px;
+    height: 581px;
+  }
+
   .backdrop.is-hidden & {
     /* закрытое окно модалки */
     transform: translate(-50%, -50%) scale(0); /* плавное появление модалки */
   }
+
 }
 
 .modal-window__btn {
@@ -45,6 +53,11 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  .modal-window__btn:hover &,
+  .modal-window__btn:focus & {
+    fill: var(--main-hover-color);
+  }
 }
 
 .is-hidden {
@@ -60,10 +73,14 @@
 .modal-window__title {
   font-weight: 700;
   font-size: 20px;
-  line-height: calc(23 / 20);
+  line-height: calc(30 / 20);
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-title-color);
   margin-bottom: 12px;
-}
 
+@include desktop{
+  line-height: calc(23 / 20);
+}
+  
+}
