--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,7 +7,11 @@
 }
 
 .header__logo {
-  margin-right: 93px;
+  margin-right: 88px;
+
+  @include desktop {
+    margin-right: 93px;
+  }
 }
 
 .footer__logo {
