--- a/css/main.css
+++ b/css/main.css
@@ -22,9 +22,9 @@
 }
 
 .mob-menu {
-  display: none;
+  /* display: none; */
   position: fixed;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   top: 0;
   left: 0;
   width: 100vw;
@@ -36,6 +36,10 @@
 
 .mob-menu-container {
   padding-left: 40px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .menu-open-btn {
@@ -43,6 +47,11 @@
   width: 40px;
   height: 40px;
   background-color: transparent;
+}
+@media screen and (min-width: 768px) {
+  .menu-open-btn {
+    display: none;
+  }
 }
 
 .menu-open-btn:hover .menu-open-btn__menu-icon, .menu-open-btn:focus .menu-open-btn__menu-icon {
@@ -69,7 +78,7 @@
   margin-top: -2px;
 }
 
-.mob-menu-nav__item {
+.mob-menu-nav__item:not(:last-child) {
   margin-bottom: 32px;
 }
 
@@ -82,6 +91,68 @@
 }
 .mob-menu-nav__link.current-link::after {
   display: none;
+}
+
+.mob-menu-contacts {
+  margin-bottom: 64px;
+}
+
+.mob-menu-contacts__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-menu-contacts__link {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.02em;
+  color: var(--main-text-color);
+}
+
+.mob-menu-contacts__link--blue {
+  font-size: 34px;
+  line-height: 1.1764705882;
+  color: var(--main-hover-color);
+}
+
+.mob-menu-soc {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  align-items: center;
+}
+
+.mob-menu-soc__item {
+  display: inline-;
+  position: relative;
+}
+.mob-menu-soc__item::after {
+  margin: 0;
+}
+.mob-menu-soc__item:not(:last-child)::after {
+  content: "";
+  width: 1px;
+  height: 22px;
+  padding: 0, 10px, 0, 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mob-menu-soc__link {
+  display: inline-block;
+  position: relative;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  letter-spacing: 0.02em;
+  color: var(--main-hover-color);
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.mob-menu-soc__item:first-child .mob-menu-soc__link {
+  padding-left: 0;
+}
+.mob-menu-soc__item:last-child .mob-menu-soc__link {
+  padding-right: 0px;
 }
 
 p,
@@ -177,7 +248,12 @@ img {
 }
 
 .header__logo {
-  margin-right: 93px;
+  margin-right: 88px;
+}
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    margin-right: 93px;
+  }
 }
 
 .footer__logo {
@@ -432,18 +508,18 @@ img {
   align-items: center;
   margin-top: 16px;
   margin-bottom: 16px;
-  margin-left: 15px;
 }
 @media screen and (min-width: 1200px) {
   .header-navigation {
     margin: 0;
+    /* margin-left: 15px; */
   }
 }
 
 .header-nav {
   display: none;
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .header-nav {
     display: flex;
   }
@@ -476,35 +552,63 @@ img {
 .header-contacts {
   display: none;
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .header-contacts {
     margin-left: auto;
     display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-left: 84px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-contacts {
+    flex-direction: row;
     justify-content: flex-end;
+    align-items: center;
   }
 }
 
 .header-contacts__item {
-  margin-right: 50px;
+  /* display: flex; */
+  margin-bottom: 10px;
 }
 .header-contacts__item:last-child {
-  margin-right: 0;
+  margin-bottom: 0;
+}
+@media screen and (min-width: 1200px) {
+  .header-contacts__item {
+    margin-bottom: 0;
+    margin-right: 50px;
+  }
+  .header-contacts__item:last-child {
+    margin-right: 0;
+  }
 }
 
 .header-contacts__link {
   display: flex;
   align-items: center;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.1666666667;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
   transition: color var(--duration) var(--timing-function-cubic);
-  padding-bottom: 32px;
-  padding-top: 32px;
 }
 .header-contacts__link:hover, .header-contacts__link:focus {
   color: var(--main-hover-color);
+}
+@media screen and (min-width: 1200px) {
+  .header-contacts__link {
+    position: relative;
+    justify-content: center;
+    align-content: center;
+    font-size: 14px;
+    line-height: 1.14;
+    padding-bottom: 32px;
+    padding-top: 32px;
+  }
 }
 
 .header-contacts__icon {
@@ -1006,7 +1110,7 @@ img {
 
 .modal-window {
   /* открытое окно модалки */
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1); /*scale показыает точку с которой будет пояляться */
