--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -1,7 +1,7 @@
 .mob-menu {
-  display: none;
+  /* display: none; */
   position: fixed;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   top: 0;
   left: 0;
   width: 100vw;
@@ -9,11 +9,14 @@
   z-index: 2;
   padding-top: 10px;
   padding-bottom: 48px;
-
 }
 
-.mob-menu-container{
+.mob-menu-container {
   padding-left: 40px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .menu-open-btn {
@@ -21,17 +24,21 @@
   width: 40px;
   height: 40px;
   background-color: transparent;
+
+  @include tablet{
+    display: none;
+  }
+
 }
 
 .menu-open-btn__menu-icon {
-  
   .menu-open-btn:hover &,
   .menu-open-btn:focus & {
     fill: var(--main-hover-color);
   }
 }
 
-.menu-close-btn{
+.menu-close-btn {
   /* position: absolute;
   top: 0px;
   right: 0px; */
@@ -44,31 +51,97 @@
 }
 
 .menu-close-btn__menu-icon {
-  
   .menu-close-btn:hover &,
   .menu-close-btn:focus & {
     fill: var(--main-hover-color);
   }
 }
 
-.mob-menu-navigation{
+.mob-menu-navigation {
   margin-top: -2px;
 }
 
-.mob-menu-nav__item {
+.mob-menu-nav__item:not(:last-child) {
   margin-bottom: 32px;
 }
 
-.mob-menu-nav__link{
+.mob-menu-nav__link {
   font-weight: 500;
   font-size: 40px;
-  line-height: calc(47/40);
+  line-height: calc(47 / 40);
   letter-spacing: 0.02em;
   color: var(--main-title-color);
 
-  &.current-link{
-    &::after{
+  &.current-link {
+    &::after {
       display: none;
     }
+  }
+}
+
+.mob-menu-contacts {
+  margin-bottom: 64px;
+}
+
+.mob-menu-contacts__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-menu-contacts__link {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: calc(28 / 24);
+  letter-spacing: 0.02em;
+  color: var(--main-text-color);
+}
+
+.mob-menu-contacts__link--blue {
+  font-size: 34px;
+  line-height: calc(40 / 34);
+  color: var(--main-hover-color);
+}
+
+.mob-menu-soc {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  align-items: center;
+}
+
+.mob-menu-soc__item {
+  display: inline-;
+  position: relative;
+
+  &::after {
+    margin: 0;
+  }
+
+  &:not(:last-child)::after {
+    content: '';
+    width: 1px;
+    height: 22px;
+    padding: 0, 10px, 0, 10px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
+}
+
+.mob-menu-soc__link {
+  display: inline-block;
+  position: relative;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: calc(22 / 18);
+  letter-spacing: 0.02em;
+  color: var(--main-hover-color);
+  padding-left: 10px;
+  padding-right: 10px;
+
+  
+  .mob-menu-soc__item:first-child & {
+    padding-left: 0;
+  }
+
+  .mob-menu-soc__item:last-child & {
+    padding-right: 0px;
   }
 }
