--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -10,7 +10,7 @@
 
 .modal-window {
   /* открытое окно модалки */
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1); /*scale показыает точку с которой будет пояляться */
