--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -22,7 +22,7 @@
   margin-bottom: 16px;
 
   @include desktop {
-    margin: 0;
+    margin: 0px;
     /* margin-left: 15px; */
   }
 }
@@ -71,12 +71,16 @@
     flex-direction: column;
     justify-content: flex-start;
     margin-left: 84px;
+
+    padding-top: 21px;
+    padding-bottom: 21px;
   }
 
   @include desktop {
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
+    padding: 0;
   }
 }
 
