--- a/css/main.css
+++ b/css/main.css
@@ -210,7 +210,7 @@ img {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 2px solid red;
+  /* outline: 2px solid rgb(0, 255, 76); */
 }
 @media screen and (min-width: 480px) {
   .container {
@@ -333,6 +333,7 @@ img {
 }
 
 .registration-form__title {
+  /* position: relative; */
   display: block;
   font-weight: 400;
   font-size: 12px;
